<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- AppBarLayout for the top app bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <!-- MaterialToolbar inside AppBarLayout -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mainTopAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:subtitle="@string/app_subtitle"
            app:subtitleCentered="true"
            app:title="@string/app_name"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- RecyclerView to display summarized journal entries -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/journalEntryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp" />

    <!-- FloatingActionButton for adding new journal entries -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/new_entry_fab_desc"
        app:backgroundTint="@color/colorSecondary"
        app:srcCompat="@drawable/ic_add" />

</LinearLayout>
