<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".NewEntryActivity">

    <!-- Top app bar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/newEntryTopAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/new_entry_title" />

    <!-- Main content container -->
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/newEntryTopAppBar"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".NewEntryActivity">

        <!-- Date input field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/date_heading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_calendar_today"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Title input field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/title_heading_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="75" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Content input field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contentContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:hint="@string/content_heading"
            android:isScrollContainer="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contentEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|top" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Carousel RecyclerView for displaying images -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/carouselRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:clipChildren="false"
            android:clipToPadding="false" />

        <!-- Save button and FloatingActionButton container -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Save button -->
            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@id/imageFab"
                android:text="@string/save_button" />

            <!-- FloatingActionButton for adding images -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/imageFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="3dp"
                android:contentDescription="@string/add_photo_fab_desc"
                app:backgroundTint="@color/colorSecondary"
                app:srcCompat="@drawable/ic_add_photo" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>